@@ -1,5 +1,8 @@
 2019-06-22  Jay Berkenbilt  <ejb@ql.org>
 
+	* QPDFWriter: allow calling set*EncryptionParameters before
+	calling setFilename. Fixes #336.
+
 	* It now works to run --completion-bash and --completion-zsh when
 	qpdf is started from an AppImage.
 
